--- a/styl/home.styl
+++ b/styl/home.styl
@@ -9,7 +9,6 @@
   position: relative;
   z-index: $zindex--carrousel;
   height: 70vh;
-  margin: 0 ($gutter * -1);
 
   +mq('>=L') {
     height: auto;
